# whisper-stt

./: README.md  bench_latency.py  bench_stream.py  doctor.py  glossary.txt  gpu-server.sh  pyproject.toml  reeval.sh  replay.sh  stream-remote.sh  streaming.py  transcribe.py
docs/: tiered-inference.md
