[project]
name = "whisper-stt"
version = "0.1.0"
description = "Realtime EN+RU speech-to-text (Russian speech with English tech terms) via faster-whisper large-v3-turbo"
# Pinned to 3.12: ctranslate2/onnxruntime/av don't ship wheels for 3.14 yet.
requires-python = "==3.12.*"
dependencies = [
    "faster-whisper>=1.1.0",
    "webrtcvad-wheels>=2.0.14",
    "numpy>=1.26",
]

[tool.uv]
# Keep the resolver from wandering onto pre-release ML builds.
prerelease = "disallow"
